# scores

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  conf  go_dependencies_bb_storage.bzl
cmd/client/: BUILD.bazel  main.go
cmd/scores/: BUILD.bazel  main.go
interface/: .gitignore  README.md  angular.json  package-lock.json  package.json
interface/src/app/: app.component.html  app.component.spec.ts  app.component.ts
interface/src/app/scoreboard/: scoreboard.component.css  scoreboard.component.html  scoreboard.component.ts
interface/src/assets/: scores.json
pkg/proto/configuration/: BUILD.bazel  client.proto
pkg/proto/scoreupdate/: BUILD.bazel  scoreupdate.proto
pkg/scorer/: BUILD.bazel  maximum_scorer.go  mean_scorer.go  median_scorer.go  scorer.go
