load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/sdclarke/scores/cmd/client",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/proto/configuration:go_default_library",
        "//pkg/proto/scoreupdate:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/util:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "client",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
