load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/buildbarn/bb-remote-execution/cmd/scores",
    visibility = ["//visibility:private"],
    deps = ["@org_golang_google_grpc//:go_default_library"],
)

go_binary(
    name = "scores",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
