load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "mean_scorer.go",
        "scorer.go",
    ],
    importpath = "github.com/buildbarn/bb-remote-execution/pkg/scorer",
    visibility = ["//visibility:public"],
    deps = ["//pkg/proto/scoreupdate:go_default_library"],
)
