load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "configuration_proto",
    srcs = ["client.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "configuration_go_proto",
    importpath = "github.com/sdclarke/scores/pkg/proto/configuration",
    proto = ":configuration_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":configuration_go_proto"],
    importpath = "github.com/sdclarke/scores/pkg/proto/configuration",
    visibility = ["//visibility:public"],
)
