load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "scoreupdate_proto",
    srcs = ["scoreupdate.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "scoreupdate_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/sdclarke/scores/pkg/proto/scoreupdate",
    proto = ":scoreupdate_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":scoreupdate_go_proto"],
    importpath = "github.com/sdclarke/scores/pkg/proto/scoreupdate",
    visibility = ["//visibility:public"],
)
